# Knowing_the_RP2040_Examples

./: README.md
Aplicacao_Usando_2_Cores/: main.c
Clocks_Example/: CMakeLists.txt  clocksdemo.c
Collecting_Data_from_the_ADC_using_DMA_Example/: CMakeLists.txt  adcdma.c
Digital_Output_Example/: CMakeLists.txt  gpio7segment.c
Dual_Core_Example/: CMakeLists.txt  dualcore.c
PIO-interrupt-example/: CMakeLists.txt  pioint.c  pioint.pio
RTC_Example/: CMakeLists.txt  rtcdemo.c
Sleep_Example/: CMakeLists.txt  sleep.c
Timer_Example/: CMakeLists.txt  ctimerdemo.c
Watchdog_Example/: CMakeLists.txt  watchdogdemo.c
helloworld/: main.c
